Implemented dynamic filtering using pg_trgm extension